--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.10.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
