--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href angular-redux.herokuapp.com ",
+    "build": "ng build --base-href https://angular-redux.herokuapp.com",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
